--- a/templates/index.html
+++ b/templates/index.html
@@ -96,6 +96,7 @@
 
     <div class="body-content">
     <div id="button_body">
+        <h1><strong>Influencer Engagement and Sponsorship Coordination Platform</strong></h1>
         <h1>Choose Your Role</h1>
         <div class="button">
             <button onclick="location.href='/sponsor/login'">Sponsor</button>
