--- a/templates/sponsor_add_adrequest.html
+++ b/templates/sponsor_add_adrequest.html
@@ -66,21 +66,11 @@
         <div class="form-group">
             <label>Status:</label>
             <div class="form-check">
-                <input type="radio" class="form-check-input" id="pending" name="status" value="pending" required>
+                <input type="radio" class="form-check-input" id="pending" name="status" value="pending" required checked>
                 <label class="form-check-label" for="pending">Pending</label>
             </div>
-            <div class="form-check">
-                <input type="radio" class="form-check-input" id="accepted" name="status" value="accepted">
-                <label class="form-check-label" for="accepted">Accepted</label>
-            </div>
-            <div class="form-check">
-                <input type="radio" class="form-check-input" id="rejected" name="status" value="rejected">
-                <label class="form-check-label" for="rejected">Rejected</label>
-            </div>
-            <div class="form-check">
-                <input type="radio" class="form-check-input" id="negotiation" name="status" value="negotiation">
-                <label class="form-check-label" for="negotiation">Negotiation</label>
-            </div>
+
+
         </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
